--- a/main2.css
+++ b/main2.css
@@ -59,7 +59,7 @@ a:hover {
   margin-top: 0.4rem;
   font-weight: bold;
   letter-spacing: -0.5px;
-  color: #63E3AE;
+  color: #ba6cf5;
 }
 
 .divider {
