--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@ a, a:visited, a:hover, a:active {
 }
 a:hover {
   /* text-decoration: underline; */
-  color: #353535;
+  color: #9CA5B4;
 }
 
 .navbar {
@@ -88,11 +88,9 @@ a:hover {
 .BigButton:hover {
   transform: scale(1.07); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
-.font-grey {
-  color: #404266;
-}
 .font-bold {
   font-weight: bold;
+  color: #000000;
 }
 .font-stat {
   font-size: 40px;
